# evolvarium

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  PARALLELIZATION.md  README.md  SPHERE-PLAN.md  evolved-1000.json  evolved-continuous.json  evolved-diverse.json  evolved-legged-seed.json  evolved-showcase.json  plant-library.json
src/: audio.rs  camera.rs  capture.rs  components.rs  config.rs  cppn.rs  fields.rs  genome.rs  gym.rs  latin.rs  main.rs  morph.rs  niche.rs  orrery.rs  orrery_view.rs  persist.rs  plant.rs  profile.rs  rng.rs  scenario.rs  sim.rs  snapshot.rs  sphere.rs  stars.rs  terrain.rs  viewer.rs  viz.rs
tools/: audit-plants.workflow.js  balance-niches.workflow.js  coevolve-niche.workflow.js  retune-combat.workflow.js  tournament.workflow.js  tune-creatures.workflow.js  tune-diversity.workflow.js  tune-locomotion.workflow.js  tune-plants.workflow.js
