[package]
name = "evolvarium"
version = "0.0.1"
edition = "2021"
description = "Artificial-life sim: GA grows blob bodies + brain shape, brains learn in life, multi-nutrient ecosystem. M0 skeleton."

[dependencies]
# Pin Bevy. Ecosystem crates gate the version (see 11-crate-stack.md) so do NOT float.
# M0 needs only the engine. bevy_rand / bevy_egui / spatial hash arrive in later milestones.
bevy = "0.18"

# Save/load survivor population (serde + JSON). Lets a good run stop + resume (BACKLOG P2).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Headless CPU snapshot renderer (--shots): ray-trace the planet to PNG, no GPU needed. PNG encode only.
image = { version = "0.25", default-features = false, features = ["png"] }

# P2 morphology gym (--gym only): articulated-body physics to evolve+learn gaits in isolation. Headless
# feature set (no render/debug/picking deps); enhanced-determinism for reproducible gym runs. NOT used by the
# live planet (kinematic) -- only gym.rs builds a PhysicsPlugins app.
avian3d = { version = "0.6", default-features = false, features = ["3d", "f32", "parry-f32", "default-collider", "xpbd_joints", "enhanced-determinism"] }

# Bevy build-speed profile (deps optimized, our crate fast to recompile).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
